# bdo2

./: .gitignore  Cargo.toml
.github/: dependabot.yml
.github/workflows/: game.yml  workflowtest.yml
assets/: cube.gltf  default_config.yaml
client/: Cargo.toml
client/.cargo/: config.toml
client/assets/: floor.png~
client/proj_src/: floor2.kra
client/src/: config.rs  enemy.rs  input.rs  main.rs  networking.rs  projectile.rs  ui.rs  utils.rs
proj_src/: floor2.kra~  floor_original.kra
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: camera.rs  config.rs  config_read.rs  defaultConfig.yaml  enemy.rs  input.rs  lib.rs  main.rs  networking.rs  projectile.rs  shader.vert  texture.rs  ui.rs  utils.rs
src/engine/: camera.rs  main.rs  mod.rs  model.rs  shader.vert  texture.rs
