[package]
name = "bdo3"
version = "0.1.0"
authors = ["John S <john@john2143.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.3.0"
serde_yaml = "0.8.14"
serde_json = "1.0.59"
serde = {version = "1.0.117", features=["derive"]}
once_cell = "1.5.2"
