[package]
name = "bdo3"
version = "0.1.0"
authors = ["John S <john@john2143.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0", features = ["serialize"] }
serde_yaml = "0.8.17"
serde_json = "1.0.59"
serde = {version = "1.0.117", features=["derive"]}
once_cell = "1.7.2"
rand = "0.8.3"
message-io = "0.13.3"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
