[package]
name = "shared"
version = "0.1.0"
authors = ["John Schmidt <john@john2143.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.bevy]
version = "0.5.0"
default-features = false
features = ["serialize", "trace"]

[dependencies]
message-io = "0.13.3"
serde_yaml = "0.8.17"
serde_json = "1.0.59"
serde = {version = "1.0.117", features=["derive"]}
once_cell = "1.5.2"
rand = "0.8.3"
