[package]
name = "shared"
version = "0.1.0"
authors = ["John Schmidt <john@john2143.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.bevy]
version = "0.8.1"
default-features = false
features = ["serialize", "trace"]

[dependencies]
message-io = "0.13.3"
serde_yaml = "0.9.11"
serde_json = "1.0.85"
serde = {version = "1.0.144", features=["derive"]}
once_cell = "1.14.0"
rand = "0.8.5"
